packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_slot__dynamic_slots_name.snap
---
source: tests/vapor/v_slot.rs
expression: code
---
import { createNodes as _createNodes, createComponent as _createComponent } from "/vue-jsx-vapor/vapor";
(() => {
  const n4 = _createComponent(Comp, null, { $: [() => ({
    name,
    fn: () => {
      const n1 = _createNodes(() => foo);
      return n1;
    }
  })] }, true);
  return n4;
})();
