packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_slot__dynamic_slots_name_with_v_for.snap
---
source: tests/vapor/v_slot.rs
expression: code
---
import { createNodes as _createNodes, createComponent as _createComponent } from "vue-jsx-vapor";
import { createForSlots as _createForSlots } from "vue";
(() => {
  const n4 = _createComponent(Comp, null, { $: [() => _createForSlots(list, (item) => ({
    name: item,
    fn: (_slotProps0) => {
      const n1 = _createNodes(() => _slotProps0.bar);
      return n1;
    }
  }))] }, true);
  return n4;
})();
