packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_slot__implicit_default_slot.snap
---
source: tests/vapor/v_slot.rs
expression: code
---
import { createComponent as _createComponent } from "vue-jsx-vapor";
import { template as _template } from "vue";
const t0 = _template("<div></div>");
(() => {
  const n1 = _createComponent(Comp, null, { default: () => {
    const n0 = t0();
    return n0;
  } }, true);
  return n1;
})();
