packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_slot__named_slots_with_comment.snap
---
source: tests/vapor/v_slot.rs
expression: code
---
import { createComponent as _createComponent } from "/vue-jsx-vapor/vapor";
import { template as _template } from "vue";
const t0 = _template("foo");
const t1 = _template("<span></span>");
(() => {
  const n8 = _createComponent(Comp, null, {
    one: () => {
      const n3 = t0();
      return n3;
    },
    default: () => {
      const n5 = t0();
      const n6 = t1();
      return [n5, n6];
    }
  }, true);
  return n8;
})();
